AM_CPPFLAGS = $(GTKMM_CFLAGS) $(DAR_CFLAGS) -DGDAR_LOCALEDIR=\"${GDAR_LOCALEDIR}\"
bin_PROGRAMS = gdar
gdar_SOURCES = gdar.cpp mylibdar.cpp mylibdar.hpp libgdar.cpp libgdar.hpp gdar_application.cpp gdar_application.hpp myuser_interaction.cpp myuser_interaction.hpp enc_dialog.hpp enc_dialog.cpp pwd_dialog.cpp pwd_dialog.hpp file.hpp file.cpp window.hpp window.cpp libdar_namespace.hpp
gdar_LDADD = $(GTKMM_LIBS) $(DAR_LIBS)
